@@ -14,11 +14,11 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 b91e9f2d2ac79e0bc053eb5ac4cb637e389728f8 ChangeLog
+SHA1 12bf36e9658d8a15a0738dca9ab0dfcb3d5a3482 ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 1d292a0e6dba2ce264985cc3004ff0dc9b298bfc MANIFEST
-SHA1 c3effd8103232dc19da954a48c8158716e4724eb META.yml
-SHA1 b85e45b2152174bfcda8766a303a9003a534e00c Makefile.PL
+SHA1 1ec004fdf7e81068f2402dab2a65cfd47791eae2 META.yml
+SHA1 59a9c967af323505f89e90ab4a2aead6c493d457 Makefile.PL
 SHA1 7250b2f536fe8a96fb25fc7435146bc006aaefe1 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 1a82e9f1eb270bb77e3349f83cf2bcea32b30102 bin/fullauto.pl
@@ -37,7 +37,7 @@ SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
 SHA1 fb2c2f6e2ade19cd024dad15dd25bebf85023a4b install_mozrepl_plugin.ahk
-SHA1 3f0c6affa3ddbc22880ad36d3c7430592d35d908 lib/Net/FullAuto.pm
+SHA1 8686a85f9b41d1edca73353372ad0d47ce2a83dd lib/Net/FullAuto.pm
 SHA1 dabbf5e523732ed0d3084fb91dcccb4f1c330ceb lib/Net/FullAuto/Custom/BackUp/README
 SHA1 c2219c6cd1af2a775ebd3b90e0d4731ef0aededc lib/Net/FullAuto/Custom/README
 SHA1 32064cac342c1fab8377c4b9fe5c41be23a92e78 lib/Net/FullAuto/Distro/fa_code.pm
@@ -48,17 +48,17 @@ SHA1 680c63d1c164c10ec6f4496f37ca9068fd53ef68 lib/Net/FullAuto/Distro/fa_maps.pm
 SHA1 60e3a5d57225134e18d71fd252ea960c9ca6f2ae lib/Net/FullAuto/Distro/fa_menu.pm
 SHA1 863e8ae080491966fa2acf721aca8a8b000dc602 lib/Net/FullAuto/Distro/fa_menu_demo.pm
 SHA1 c61c03f9beda14559fdf07e569e813a2bd553a53 lib/Net/FullAuto/Distro/fullautologo.jpg
-SHA1 6d24023fb50d5c37ddec566592e4d2d657e194f3 lib/Net/FullAuto/FA_Core.pm
+SHA1 6e1e74f9947a39e5874f284b61188f85c82b1d1d lib/Net/FullAuto/FA_Core.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1
 
-iQEcBAEBAgAGBQJS0vSTAAoJEBa/9Pad787ELYsH/22e4PHK9Gq5zHfaCShsReUY
-m8b74uBfPiuFrNGb9K/kNRI0kA8loa78O+6dHs1CD68cc2h35m89yEqPwdrBnnfn
-FUx+WAI8zBrfdaqQa3ciiLLtUPGwAGKAGppOQGnyPbdPAQuVBM83K0nqGpVWmaBq
-HBiLT/DhwwXefUqTnk+VyXFdsWwWQxbmp/pR3+P6M/oorsZTmYjSMh43Hqlwtnxy
-6Jmb/+xPR3MMIUX0L0LBnsJTa0Cwit9AIpoao0Rmj1a9RifU6m4yuKgSF4D3tXSN
-f4zwS56DNLBV3cgQezim8JYzVXFPB+6+zFvEh7fI7JkWwRwajriIoq1swGeGKXk=
-=1FLt
+iQEcBAEBAgAGBQJS19QqAAoJEBa/9Pad787E2bcIAItqmHD+dBD576bUE1Okg77g
+xjLxVn6Nl+WX2TRQJFd8xzoWq0GzcqtE1+QYid9m/C0JknUl/qbhc0FP+ZWx0O+j
+cbm7rAIVFQDZ65ViKAu3Sxpmwk7JDT1D/iWk28z4vRMqZtBA5pYHpFZjZRIbzVU8
+1JQsynR/GeSEXL/7gMAICt5Zj8HUGo1HmCzE7NOOBd/4FT60Jt9+KL0pDjzEXBx6
+qSuY7zRoXFKvh4+H2X/gTgAOKoFf21i9gXOS8VmivceWm8SAHrX/yXAWCm1TLEfw
+4LjU64mXXELRJLzK6RRlnJR/z+2ubqV296ySZxQIjlfgkg7isWGCvCcP9/gA0M8=
+=v6h7
 -----END PGP SIGNATURE-----
